# personal_codebase

./: README.md
BASIC/: BINARY.tibasic  COMPATAB.tibasic  binary_info.json  compatab_index.json
Euler/: 001.py  002.py  003.py  004.py  005.py  006.py  007.py  008.py  009.py  010.py  011.py  012.py  013.py  014.py  015.py  016.py  README.md  pymath.py
UNIX/: README.md  README.md~  cat.cpp  echo.cpp  false.cpp  true.cpp  yes.cpp
arduino/game of life/: arduino_game_of_life.cpp  info.json
bash/: 30_days.sh  apptransfer.sh  apropos.sh  branchcopy.sh  check_scan.sh  count_emails.sh  fs_diff.sh  notify_ping.sh  rename.sh  winebuilder.sh
blog/: dns_message.py
c/: monty_hall.c
c#/TriangleSolver/: TriangleSolver.sln  TriangleSolver.userprefs
c#/postman/: Packages.mdproj  postman.sln  postman.userprefs
cpp/: echo
cpp/game_of_life/: conway.cpp  info.json
cpp/lib/: Configuration.cpp  Configuration.h  Path.cpp  Path.h  RateLimiter.cpp  RateLimiter.h  Singleton.hpp  TImer.hpp  ThreadsafeQueue.hpp
cpp/tinybasic/: README  basic  basic.cpp  basic.h  io.h  program_reader.h  stack.h  stringutils.cpp  stringutils.h  tokenizer.cpp  tokenizer.h
haxe/CreditCardAlgorithm/: build.hxml  build.hxml~
html/: lifetime_generator.html
html/2010-11-24 4D Pong/: index.html
java/: SerializableHashMap.java  dialogs.java
node/: 13 daytime.js  17 quoteoftheday.js  19 chargen.js  7 echo.js  9 discard.js  servicecheck.js
python/: apropos.py  codescraper.py  distributed_hash_table.py  dns.py  email_attachment_extractor.py  exe_reader.py  get_firefox_bookmarks.py  html2csv.py  image_generator.py  least_subset_solver.py  markov.py  monty_hall.py  pretty_diff.py  pyportscanner.py  python_webserver.py  python_webserver.py~  stemmer.py  stpetersburg.py  timed_message.py  xkcdfetch.py  xlsx.py
scratch/: scratchpi.sb
vala/azulwiki/: CMakeLists.txt  INSTALL  TODO
vala/azulwiki/data/: azulwiki.desktop  azulwiki.xml
vala/azulwiki/src/: Makefile  azul.vala  cmake_install.cmake  data_connection.vala  settings.vala
wheel_of_fortune_ai/: README.md  README.md~  common.py  ngram.py  wheel.py  wheel.py~  wheelmatch.py  wordgraph.py
(+576 files in other folders)
